Penambahan beberapa test case dan unit test