@@ -1,7 +1,9 @@
 package id.ac.ui.cs.advprog.order.service;
 
 import id.ac.ui.cs.advprog.order.dto.OrderCreateRequest;
+import id.ac.ui.cs.advprog.order.exception.InvalidOrderStatusTransitionException;
 import id.ac.ui.cs.advprog.order.exception.OrderNotFoundException;
+import id.ac.ui.cs.advprog.order.exception.SelfPurchaseNotAllowedException;
 import id.ac.ui.cs.advprog.order.model.Order;
 import id.ac.ui.cs.advprog.order.model.OrderStatus;
 import id.ac.ui.cs.advprog.order.repository.OrderRepository;
@@ -19,6 +21,7 @@ import java.util.Optional;
 import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.junit.jupiter.api.Assertions.assertNotNull;
 import static org.junit.jupiter.api.Assertions.assertThrows;
+import static org.mockito.Mockito.never;
 import static org.mockito.Mockito.verify;
 import static org.mockito.Mockito.when;
 
@@ -74,7 +77,7 @@ class OrderServiceImplTest {
         List<Order> result = orderService.getAllOrders();
 
         assertEquals(1, result.size());
-        assertEquals(1L, result.get(0).getId());
+        assertEquals(1L, result.getFirst().getId());
     }
 
     @Test
@@ -97,18 +100,160 @@ class OrderServiceImplTest {
     }
 
     @Test
-    void deleteOrderById_deletesExistingEntity() {
+    void updateOrder_throwsWhenStatusIsCompleted() {
+        order.setStatus(OrderStatus.COMPLETED);
         when(orderRepository.findById(1L)).thenReturn(Optional.of(order));
 
-        orderService.deleteOrderById(1L);
-
-        verify(orderRepository).delete(order);
+        assertThrows(InvalidOrderStatusTransitionException.class, () -> orderService.updateOrder(1L, request));
+        verify(orderRepository, never()).save(order);
     }
 
     @Test
-    void deleteOrderById_throwsWhenNotFound() {
+    void updateStatus_allowsValidTransition() {
+        order.setStatus(OrderStatus.PAID);
+        when(orderRepository.findById(1L)).thenReturn(Optional.of(order));
+        when(orderRepository.save(order)).thenReturn(order);
+
+        Order result = orderService.updateStatus(1L, OrderStatus.PURCHASED);
+
+        assertEquals(OrderStatus.PURCHASED, result.getStatus());
+        verify(orderRepository).save(order);
+    }
+
+    @Test
+    void updateStatus_allowsPendingToPaid() {
+        order.setStatus(OrderStatus.PENDING);
+        when(orderRepository.findById(1L)).thenReturn(Optional.of(order));
+        when(orderRepository.save(order)).thenReturn(order);
+
+        Order result = orderService.updateStatus(1L, OrderStatus.PAID);
+
+        assertEquals(OrderStatus.PAID, result.getStatus());
+        verify(orderRepository).save(order);
+    }
+
+    @Test
+    void updateStatus_allowsPendingToCancelled() {
+        order.setStatus(OrderStatus.PENDING);
+        when(orderRepository.findById(1L)).thenReturn(Optional.of(order));
+        when(orderRepository.save(order)).thenReturn(order);
+
+        Order result = orderService.updateStatus(1L, OrderStatus.CANCELLED);
+
+        assertEquals(OrderStatus.CANCELLED, result.getStatus());
+        verify(orderRepository).save(order);
+    }
+
+    @Test
+    void updateStatus_allowsPurchasedToShipped() {
+        order.setStatus(OrderStatus.PURCHASED);
+        when(orderRepository.findById(1L)).thenReturn(Optional.of(order));
+        when(orderRepository.save(order)).thenReturn(order);
+
+        Order result = orderService.updateStatus(1L, OrderStatus.SHIPPED);
+
+        assertEquals(OrderStatus.SHIPPED, result.getStatus());
+        verify(orderRepository).save(order);
+    }
+
+    @Test
+    void updateStatus_allowsShippedToCompleted() {
+        order.setStatus(OrderStatus.SHIPPED);
+        when(orderRepository.findById(1L)).thenReturn(Optional.of(order));
+        when(orderRepository.save(order)).thenReturn(order);
+
+        Order result = orderService.updateStatus(1L, OrderStatus.COMPLETED);
+
+        assertEquals(OrderStatus.COMPLETED, result.getStatus());
+        verify(orderRepository).save(order);
+    }
+
+    @Test
+    void updateStatus_allowsSameStatusTransition() {
+        order.setStatus(OrderStatus.PAID);
+        when(orderRepository.findById(1L)).thenReturn(Optional.of(order));
+        when(orderRepository.save(order)).thenReturn(order);
+
+        Order result = orderService.updateStatus(1L, OrderStatus.PAID);
+
+        assertEquals(OrderStatus.PAID, result.getStatus());
+        verify(orderRepository).save(order);
+    }
+
+    @Test
+    void updateStatus_rejectsInvalidTransition() {
+        order.setStatus(OrderStatus.PAID);
+        when(orderRepository.findById(1L)).thenReturn(Optional.of(order));
+
+        assertThrows(InvalidOrderStatusTransitionException.class,
+                () -> orderService.updateStatus(1L, OrderStatus.COMPLETED));
+        verify(orderRepository, never()).save(order);
+    }
+
+    @Test
+    void updateStatus_rejectsWhenCurrentStatusCompleted() {
+        order.setStatus(OrderStatus.COMPLETED);
+        when(orderRepository.findById(1L)).thenReturn(Optional.of(order));
+
+        assertThrows(InvalidOrderStatusTransitionException.class,
+                () -> orderService.updateStatus(1L, OrderStatus.CANCELLED));
+        verify(orderRepository, never()).save(order);
+    }
+
+    @Test
+    void updateStatus_rejectsWhenCurrentStatusCancelled() {
+        order.setStatus(OrderStatus.CANCELLED);
+        when(orderRepository.findById(1L)).thenReturn(Optional.of(order));
+
+        assertThrows(InvalidOrderStatusTransitionException.class,
+                () -> orderService.updateStatus(1L, OrderStatus.PAID));
+        verify(orderRepository, never()).save(order);
+    }
+
+    @Test
+    void cancelOrderById_setsCancelledWhenAllowed() {
+        order.setStatus(OrderStatus.PAID);
+        when(orderRepository.findById(1L)).thenReturn(Optional.of(order));
+        when(orderRepository.save(order)).thenReturn(order);
+
+        Order result = orderService.cancelOrderById(1L);
+
+        assertEquals(OrderStatus.CANCELLED, result.getStatus());
+        verify(orderRepository).save(order);
+    }
+
+    @Test
+    void cancelOrderById_rejectsInvalidCancellation() {
+        order.setStatus(OrderStatus.SHIPPED);
+        when(orderRepository.findById(1L)).thenReturn(Optional.of(order));
+
+        assertThrows(InvalidOrderStatusTransitionException.class, () -> orderService.cancelOrderById(1L));
+        verify(orderRepository, never()).save(order);
+    }
+
+    @Test
+    void cancelOrderById_throwsWhenNotFound() {
         when(orderRepository.findById(42L)).thenReturn(Optional.empty());
 
-        assertThrows(OrderNotFoundException.class, () -> orderService.deleteOrderById(42L));
+        assertThrows(OrderNotFoundException.class, () -> orderService.cancelOrderById(42L));
+    }
+
+    @Test
+    void createOrder_throwsWhenTitiperEqualsJastiper() {
+        request.setTitiperUserId("same-user");
+        request.setJastiperUserId("same-user");
+
+        assertThrows(SelfPurchaseNotAllowedException.class, () -> orderService.createOrder(request));
+        verify(orderRepository, never()).save(order);
+    }
+
+    @Test
+    void updateOrder_throwsWhenTitiperEqualsJastiper() {
+        request.setTitiperUserId("same-user");
+        request.setJastiperUserId("same-user");
+        when(orderRepository.findById(1L)).thenReturn(Optional.of(order));
+
+        assertThrows(SelfPurchaseNotAllowedException.class, () -> orderService.updateOrder(1L, request));
+        verify(orderRepository, never()).save(order);
     }
 }
